--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "dev:host": "next dev --hostname 0.0.0.0 --port 3000"
   },
   "dependencies": {
     "@emotion/react": "^11.13.0",
