--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cookies-next": "^4.2.1",
     "framer-motion": "^11.3.24",
     "gsap": "^3.12.5",
+    "mongodb": "^6.9.0",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
     "react": "^18",
